# xFasterTransformer

./: .clang-format  .cmake-format.py  .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CODING_STANDARDS.md  CONTRIBUTING.md  README.md  README_CN.md  README_JP.md  VERSION  build.sh  ci_build  pyproject.toml  requirements-gpu.txt  requirements.txt  run_dev_docker.sh  setup.py
benchmark/: README.md  benchmark.py  prompt.json  run.sh  run_benchmark.sh  run_benchmark_dist.sh
ci/: README.md  test_case
cmake/: cmdline.cmake  gpudnn.cmake  ig.cmake  jsoncpp.cmake  mkl.cmake  mklml.cmake  oneccl.cmake  onednn.cmake  sentencepiece.cmake  xdnn.cmake
distributed/: 000-ssh-wo-passwd-update-hosts.xml  README.md  ansible.cfg  hosts  parser.py  perf_tools.md  requirements.txt  run.sh  run_benchmark.sh  run_benchmark_all.sh  run_benchmark_erdma.sh  run_benchmark_tcp.sh
dockerfiles/: Dockerfile  Dockerfile.dev  Dockerfile.release
evaluation/: CMakeLists.txt  README.md  binding.cpp  eval.cpp  eval.h  eval.py  eval_models.py  requirements.txt  run.sh  run_model.sh
examples/: README.md
examples/cpp/: CMakeLists.txt  README.md  cb_check.cpp  example.cpp  timer.h  vocab_opt.cpp  vocab_qwen.cpp
finetune/: README.md  requirements.txt
include/: abstract_decoder.h  abstract_searcher.h  bfloat16.h  dtype.h  layers.h  layers_attention.h  layers_decoder.h  layers_gemm.h  layers_mlp.h  layers_norm.h  layers_token_embedding.h  messenger.h  mlp.h  models.h  my_types.h  rotary_embedding_api.h  shm_reduction.h  xfastertransformer.h
serving/: vllm-xft.md
src/: CMakeLists.txt
src/comm/: ccl_msger.cpp
src/comm_helper/: CMakeLists.txt  comm_helper.cpp
src/common/: aligned_type.h  allocator.h  attn_metadata.h  batch_info.h  bfloat16.h  bit_cast.h  datatypes.h  float16.h  fp8_e4m3.h  intrinsic_ext.h  kvcache_mgr.h  kvcache_tensor.h  llm_params.h  my_types.h  sample_info.h  sequence.h  singleton.h  transformer_ctx.h  uint4x2.h
src/kernels/: CMakeLists.txt  attention_kernels.cpp  attention_kernels.h  bgemm_f32bf16f32_simple.h  gemm_kernel_ext.cpp  gemm_kernel_ext.h  gemm_kernel_ext2.cpp  gemm_kernel_ext3.cpp  gemm_kernel_ext_fp16.cpp  hgemm_f32f16f32_simple.h  hgemm_f32i8f32_simple.h  layernorm_kernels.cpp  layernorm_kernels.h  rmsnorm_kernels.cpp  rmsnorm_kernels.h  rotary_embedding_kernels.cpp  rotary_embedding_kernels.h  sgemm_f32f16f32_simple.h  sgemm_f32i8f32_simple.h  sgemm_simple.h  token_embedding_kernels.cpp  token_embedding_kernels.h  vnni_gemm.h
src/layers/: CMakeLists.txt  alibi_embedding.cpp  alibi_embedding.h  attention.cpp  attention.h  attn_baichuan.h  attn_chatglm.h  attn_chatglm2.h  attn_chatglm2_3.h  attn_deepseek.h  attn_qwen.h  attn_rope_scaling.h  decoder_block.h  decoder_layer.cpp  decoder_layer.h  dist_linear.h  layer_norm.cpp  layer_norm.h  mlp_chatglm.h  mlp_chatglm2.h  mlp_chatglm2_3.h  mlp_llama.cpp  mlp_llama.h  mlp_mixtral.h  mlp_moe.cpp  mlp_moe.h  mlp_standard.h  moe_deepseek.cpp  moe_deepseek.h  moe_qwen3.h  opt_embedding.h  rms_norm.cpp  rms_norm.h  rope_2d.cpp  rope_2d.h  rotary_embedding.cpp  rotary_embedding.h  rotary_embedding_api.cpp  rotary_embedding_api.h  rotary_embedding_chatglm2.cpp  (+13 more)
src/models/: CMakeLists.txt  baichuan.cpp  baichuan.h  chatglm.cpp  chatglm.h  chatglm2.cpp  chatglm2.h  chatglm2_3.cpp  chatglm2_3.h  chatglm3.h  chatglm4.h  common_decoder.h  deepseek.cpp  deepseek.h  env_config.cpp  gemma.cpp  gemma.h  gpt_neo.cpp  gpt_neo.h  hybrid_model.h  kvcache_manager.cpp  kvcache_manager.h  llama.cpp  llama.h  mixtral.cpp  mixtral.h  model_factory.h  models.cpp  opt_decoder.cpp  opt_decoder.h  prompt.h  qwen.cpp  qwen.h  qwen2.cpp  qwen2.h  qwen3.h  qwen3_moe.h  telechat.cpp  telechat.h  yarn_llama.cpp  (+1 more)
src/pytorch/: CMakeLists.txt  auto_model.h  pytorch_warpper.cpp
src/searchers/: CMakeLists.txt  beam_search.cpp  beam_search.h  greedy_search.cpp  greedy_search.h  sample_search.cpp  sample_search.h  sampling.cpp  sampling.h  sampling_params.h  search_utils.cpp  search_utils.h  searcher.h
src/utils/: CMakeLists.txt  add_util.h  bert_util.h  compile_util.h  copy_util.h  debugger.h  decoder_util.h  environment.h  gpu_matmul_helper.h  gpu_util.h  gpu_utils.hpp  intrinsics_util.h  logger.cpp  logger.h  matmul_helper.h  messenger.cpp  messenger.h  numa_allocator.cpp  numa_allocator.h  progress_bar.h  prompt.h  quantize_util.h  shm_ccl.cpp  shm_ccl.h  shm_reduction.cpp  shm_reduction.h  simple_mem_pool.h  split_util.h  thread_util.h  timeline.h  timer.h  transformer_util.h  transpose_util.h  type_selector.h  verbose.h  weight_util.h
src/utils/gptq/: CMakeLists.txt  README.md  gptq.cc  gptq.cpp  gptq.h  quantizer.cc  quantizer.cpp  quantizer.h  run_cholesky.cc  run_weight_quant.cc  utils.cc  utils.cpp  utils.h
src/xfastertransformer/: __init__.py  automodel.py  env.py  requirements.txt
src/xfastertransformer/tools/: __init__.py  baichuan2_convert.py  baichuan_convert.py  chatglm23_convert.py  chatglm2_3_convert.py  chatglm2_convert.py  chatglm3_convert.py  chatglm4_convert.py  chatglm_convert.py  convert.py  deepseek_moe_convert.py  deepseek_v2_convert.py  gptneo_convert.py  llama_convert.py  mistral_convert.py  mixtral_convert.py  opt_convert.py  qwen2_convert.py  qwen3_convert.py  qwen_convert.py  telechat_convert.py  yarn_llama_convert.py
tests/: CMakeLists.txt
tests/ut/: CMakeLists.txt  alibi_embedding_test.cpp  attention_kernels_test.cpp  attention_sharded_test.cpp  beam_search_test.cpp  beam_search_test.h  cross_attention_test.cpp  gemm_kernel_ext_test.cpp  gemm_kernel_test.cpp  kv_reorder_test.cpp  layers_attention_test.cpp  layers_decoder_test.cpp  layers_mlp_test.cpp  layers_norm_test.cpp  layers_test.cpp  messenger_test.cpp  repetition_penalty_test.cpp  rms_norm_test.cpp  rotary_embedding_test.cpp  shm_test.cpp  small_gemm_test.cpp  timeline_test.cpp  token_embedding_test.cpp  transpose_test.cpp
tools/: README.md  baichuan_convert.py  chatglm23_convert.py  chatglm2_3_convert.py  chatglm2_convert.py  chatglm3_convert.py  chatglm_convert.py  convert_tools.py  llama_convert.py  opt_convert.py  qwen_convert.py  (+1 more)
(+205 files in other folders)
